Made responsive and also changed the style

--- a/index.html
+++ b/index.html
@@ -3,11 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Professional Navbar</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js" defer></script>
   </head>
+
   <body>
-    <h1>TEsting</h1>
+    <nav class="navbar">
+      <div class="nav-container">
+        <a href="#" class="logo">BrandName</a>
+
+        <button class="menu-toggle" aria-label="Toggle navigation">☰</button>
+
+        <ul class="nav-links">
+          <li><a href="#" class="active">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+    <script src="script.js"></script>
   </body>
 </html>
